Use env in prod

--- a/{{cookiecutter.out_dir}}/docker.env.dist
+++ b/{{cookiecutter.out_dir}}/docker.env.dist
@@ -1,3 +1,6 @@
 #
 HOSTNAME=${FRONT_NAME}
+FRONT__REACT_APP_API_URL=http://localhost:8000/api
+FRONT__REACT_APP_BASE_URL=http://localhost:8000
+FRONT__REACT_APP_SOURCE_VECTOR_URL=http://localhost:8000/api/layer
 # vim: set ft=sh:
