--- a/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/dev/clear.yml
+++ b/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/dev/clear.yml
@@ -1,4 +1,4 @@
 ---
 cops_terralego_deploy_env: dev
-cops_terralego_back_url: "{{cookiecutter.dev_back_domain}}"
-cops_terralego_vector_tiles_url: "{{cookiecutter.dev_tiles_domain}}"
+cops_terralego_back_url: "{{cookiecutter.dev_back_url}}"
+cops_terralego_vector_tiles_url: "{{cookiecutter.dev_tiles_url}}"
