--- a/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/prod/clear.yml
+++ b/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/prod/clear.yml
@@ -1,4 +1,4 @@
 ---
 cops_terralego_deploy_env: prod
-cops_terralego_back_url: "{{cookiecutter.prod_back_domain}}"
-cops_terralego_vector_tiles_url: "{{cookiecutter.prod_tiles_domain}}"
+cops_terralego_back_url: "{{cookiecutter.prod_back_url}}"
+cops_terralego_vector_tiles_url: "{{cookiecutter.prod_tiles_url}}"
