--- a/{{cookiecutter.out_dir}}/docker-compose.yml
+++ b/{{cookiecutter.out_dir}}/docker-compose.yml
@@ -1,5 +1,6 @@
 version: "3.7"
 x-images:
+  x-nginx: &nginx {environment: {RUN_NGINX: "1"}}
   x-env:
     env: &env {env_file: [.env, docker.env]}
   {{cookiecutter.app_type}}: &{{cookiecutter.app_type}}
@@ -10,14 +11,7 @@ services:
   nginx:
     <<: [ *env ]
     image: "${{'{'}}{{cookiecutter.app_type.upper()}}_NGINX_IMAGE}:${{'{'}}{{cookiecutter.app_type.upper()}}_NGINX_IMAGE_VERSION}"
-    command: >
-      /bin/sh -c
-      "envsubst '
-      $$HOSTNAME
-      '< /etc/nginx/conf.d/vhost.conf.template
-      > /etc/nginx/conf.d/default.conf
-      && nginx -g 'daemon off;'"
-      # Replace hostname in vhost.conf
+    command: /code/init/init.sh
   {{cookiecutter.app_type}}:
     <<: [ *{{cookiecutter.app_type}} ]
   cron:
