--- a/{{cookiecutter.out_dir}}/.gitlab-ci.yml
+++ b/{{cookiecutter.out_dir}}/.gitlab-ci.yml
@@ -8,10 +8,7 @@ stages:
   - release
   - teardown
   - deploy
-#  - manual_dev_build
-#  - manual_dev_release
-#  - manual_dev_teardown
-#  - manual_dev_deploy
+  - manual_dev_deploy
 
 services: ["docker:dind"]
 
@@ -83,7 +80,7 @@ variables:
 # Indeed, gitlab-ci would not interpret multiple nested variables, eg: $PRELOAD_IMAGES
 # /!\  /!\  /!\
 #
-before_script:
+before_script: &top_before_script
 - &pullsubmodules
     cd local/terra-front-deploy && git fetch origin && git reset --hard $TERRAFRONT_DEPLOY_VERSION && cd -
 - for i in
@@ -127,19 +124,19 @@ before_script:
     fi;done;fi"
 
 build_images: &build_images
-  variables:
+  variables: &build_images_vars
     PRELOAD_IMAGES: "$LATEST_DOCKER_IMAGE $TAGGUED_DOCKER_IMAGE"
   tags: ["{{cookiecutter.runner_tag}}"]
   stage: build
   script:
-  - |-
+  - &build_step1 |-
     for i in $DOCKER_BUILT_SERVICES;do
       ( echo "$D_COMPOSE -f docker-compose-build.yml build $i" >&2 )&
       ( $D_COMPOSE -f docker-compose-build.yml build $i \
         || ( echo "BUILD ERROR: $i" >> /docker_images_errors ) )
     done
     if [ -e /docker_images_errors ];then cat /docker_images_errors;exit 1;fi
-  - sh -c "set -ex
+  - &build_step2 sh -c "set -ex
     && docker inspect \"\${CURRENT_DOCKER_IMAGE}\" >/dev/null
     && docker inspect \"\${CURRENT_DOCKER_NGINX_IMAGE}\" >/dev/null
     && docker save \"\${CURRENT_DOCKER_IMAGE}\" \"\${CURRENT_DOCKER_NGINX_IMAGE}\"
@@ -173,11 +170,11 @@ lint:
   tags: ["{{cookiecutter.runner_tag}}"]
   script:
   # redo the docker login, without the /bin/true, failing if the registry is down
-  - sh /docker_login
+  - &release_step1 sh /docker_login
   # quoting & subshelling to work around gitlab variable substitutions
-  - sh -c "docker tag \"\$(eval echo \$TO_RELEASE_DOCKER_IMAGE)\"
+  - &release_step2 sh -c "docker tag \"\$(eval echo \$TO_RELEASE_DOCKER_IMAGE)\"
     \"\$(eval echo \$RELEASED_DOCKER_IMAGE)\""
-  - sh -c "docker push \"\$(eval echo \$RELEASED_DOCKER_IMAGE)\""
+  - &release_step3 sh -c "docker push \"\$(eval echo \$RELEASED_DOCKER_IMAGE)\""
   variables: &release_vars
     PRELOAD_IMAGES: ""
     TO_RELEASE_DOCKER_IMAGE: "$CURRENT_DOCKER_IMAGE"
@@ -227,9 +224,9 @@ teardown_env:
   stage: teardown
   when: always
   script:
-  - $D_COMPOSE down || /bin/true
+  - &teardown_step1 $D_COMPOSE down || /bin/true
   # keep latest tarballs in cache for rebuilds on references branch(s)
-  - if [ -e "${IMAGES_TARBALL}" ] && [ -e "${SUCCESS_FLAG}" ];then
+  - &teardown_step2 if [ -e "${IMAGES_TARBALL}" ] && [ -e "${SUCCESS_FLAG}" ];then
       if ( echo "$CI_COMMIT_REF_NAME"
          | egrep -q "(^($MASTER_BRANCH)$|$RESTORE_REF_TARBALL_REGEX)" )
       ;then
@@ -237,7 +234,7 @@ teardown_env:
       fi;
     fi
   # cleanup pipeline image & pending artefacts
-  - rm -fv ${IMAGES_TARBALL}* "${SUCCESS_FLAG}"
+  - &teardown_step3 rm -fv ${IMAGES_TARBALL}* "${SUCCESS_FLAG}"
 
 .deploy_tpl: &deploy_tpl
   tags: ["{{cookiecutter.runner_tag}}"]
@@ -263,7 +260,7 @@ teardown_env:
 deploy_dev: &deploy_dev
   <<: [ *deploy_tpl ]
   when: on_success
-  variables:
+  variables: &deploy_dev_vars
     <<: [ *deploy_vars_tpl ]
     A_ENV_NAME: dev
   only: [master, tags]
@@ -271,43 +268,32 @@ deploy_dev: &deploy_dev
     name: dev
     url: https://{{cookiecutter.dev_front_domain}}
 
-## disable for now as it blocks main pipeline
-## manual rebuild on any branch except master or tags , no filter
-## # and the according deploy job
-## # implicitly the deploy job on the branch will auto-deploy the manually built image
-## .manual_jobs_on_branches_tpl: &manual_jobs_on_branches_tpl
-##   only: [branches, triggers, web, api, schedules]
-##   except: [master, tags]
-##
-## # separate manual launch job to allow concurrent pushing of images
-## # when project has multiple images to release
-## manual_build_image_from_any_commit_as_dev_image:
-##   <<: [ *build_images, *manual_jobs_on_branches_tpl ]
-##   stage: manual_dev_build
-##   when: manual
-##
-## manual_release_any_commit_as_dev_image:
-##   <<: [ *manual_jobs_on_branches_tpl,  *release_taggued_image ]
-##   stage: manual_dev_release
-##   variables:
-##     <<: [ *release_vars ]
-##     RELEASED_DOCKER_IMAGE: "$DEV_DOCKER_IMAGE"
-##
-## manual_release_any_commit_as_nginx_dev_image:
-##   <<: [ *manual_jobs_on_branches_tpl,  *release_taggued_image ]
-##   stage: manual_dev_release
-##   variables:
-##     <<: [ *release_vars ]
-##     RELEASED_DOCKER_IMAGE: "$DEV_NGINX_DOCKER_IMAGE"
-##
-## deploy_dev_after_manual_release:
-##   <<: [ *manual_jobs_on_branches_tpl,  *deploy_dev ]
-##   stage: manual_dev_deploy
-##   script:
-##   - |-
-##     .ansible/scripts/call_ansible.sh -vv -l $A_ENV_NAME \
-##     "${DEPLOY_PLAYBOOK}" -e "{cops_terralego_docker_tag: dev}"
-##
+# As gitlab-ci does not support pipeline branching, for manual dev release, we need
+# to make a last and one-for-all deploy step for non-blocking pipelines when we do a merge request
+manual_dev_release_and_deploy:
+  <<: [ *manual_jobs_on_branches_tpl, *deploy_dev, *release_tpl ]
+  stage: manual_dev_deploy
+  when: manual
+  allow_failure: true
+  variables:
+    <<: [ *build_images_vars, *release_vars, *deploy_dev_vars ]
+    RELEASED_DOCKER_IMAGE: "$DEV_DOCKER_IMAGE"
+  before_script: *top_before_script
+  script:
+  - *build_step1
+  - *release_step1
+  - sh -c "docker tag \"\$(eval echo \$CURRENT_DOCKER_IMAGE)\"       \"\$(eval echo \$DEV_DOCKER_IMAGE)\""
+  - sh -c "docker tag \"\$(eval echo \$CURRENT_DOCKER_NGINX_IMAGE)\" \"\$(eval echo \$DEV_NGINX_DOCKER_IMAGE)\""
+  - sh -c "docker push \"\$(eval echo \ \$DEV_DOCKER_IMAGE)\" \"\$(eval echo \$DEV_NGINX_DOCKER_IMAGE)\""
+  - *teardown_step1
+  - *teardown_step2
+  - *teardown_step3
+  - *deploy_setup
+  - *deploy_key_setup
+  - |-
+    .ansible/scripts/call_ansible.sh -vv -l $A_ENV_NAME \
+    "${DEPLOY_PLAYBOOK}" -e "{cops_{{cookiecutter.app_type}}_docker_tag: dev}"
+
 deploy_qa: &deploy_qa
   <<: [ *deploy_tpl ]
   only: [tags, master]
