--- a/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/all/app.yml
+++ b/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/all/app.yml
@@ -6,3 +6,4 @@ cops_terralego_docker_image: "{{cookiecutter.docker_image}}"
 cops_terralego_nginx_docker_image: "{{cookiecutter.nginx_docker_image}}"
 cops_terralego_gitref: "{{'{{'}}lookup('env', 'CI_COMMIT_TAG_NAME') or lookup('env', 'CI_COMMIT_REF_NAME') or 'latest'}}"
 cops_terralego_docker_tag: "{{'{{'}}cops_terralego_gitref.replace('master', 'latest')}}"
+cops_terralego_nginx_docker_tag: "nginx-{{'{{'}}cops_terralego_docker_tag.replace('master', 'latest')}}"
