--- a/{{cookiecutter.out_dir}}/docker-compose.yml
+++ b/{{cookiecutter.out_dir}}/docker-compose.yml
@@ -11,7 +11,19 @@ services:
   nginx:
     <<: [ *env ]
     image: "${{'{'}}{{cookiecutter.app_type.upper()}}_NGINX_IMAGE}:${{'{'}}{{cookiecutter.app_type.upper()}}_NGINX_IMAGE_VERSION}"
-    command: /code/init/init.sh
+    volumes:
+      - ./local/terra-front-deploy/prod/etc/nginx/vhost.conf.template:/etc/nginx/conf.d/vhost.conf.template
+      - htpasswd:/etc/nginx/htpasswd
+      - logs:/logs/
+    command: >
+      /bin/sh -c
+      "envsubst '
+      $$HOSTNAME
+      '< /etc/nginx/conf.d/vhost.conf.template
+      > /etc/nginx/conf.d/default.conf
+      && exec /code/init/init.sh"
+    environment:
+    - FOREGO_PROCFILE=/etc/procfiles/nginx_logrotate.Procfile
   {{cookiecutter.app_type}}:
     <<: [ *{{cookiecutter.app_type}} ]
   cron:
@@ -19,3 +31,6 @@ services:
     depends_on:
       - {{cookiecutter.app_type}}
     command: /bin/bash /code/init/cron.sh
+volumes:
+  logs:
+  htpasswd:
