Continue on template

--- a/{{cookiecutter.out_dir}}/.env.dist
+++ b/{{cookiecutter.out_dir}}/.env.dist
@@ -9,5 +9,8 @@ APP_TYPE={{cookiecutter.app_type}}
 CI_COMMIT_SHA=master
 NGINX_PORT=8080
 NGINX_SSL_PORT=8443
-NODE_VERSION={{cookiecutter.node_version}}
+NODE_BASE_NODE_IMAGE=corpusops/node
+NODE_BASE_NODE_VERSION={{cookiecutter.node_version}}
+NODE_BASE_NGINX_VERSION={{cookiecutter.nginx_version}}
+NODE_BASE_NGINX_IMAGE=corpusops/nginx
 # end: docker variables
