--- a/{{cookiecutter.out_dir}}/.gitignore
+++ b/{{cookiecutter.out_dir}}/.gitignore
@@ -1,8 +1,16 @@
-# node
-node_modules
-/build
+# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+
+# dependencies
+/node_modules
+/.pnp
+.pnp.js
 /**/*/build
 
+# testing
+/coverage
+
+# production
+/build
 
 # Docker local settings
 /.env
@@ -10,9 +18,21 @@ node_modules
 /init
 /netrc
 
+# misc
+.DS_Store
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+public/env.json
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
 # IDE settings
 .vscode
-
+.idea
 
 # corpusops & ansible
 *.retry
