--- a/{{cookiecutter.out_dir}}/.gitlab-ci.yml
+++ b/{{cookiecutter.out_dir}}/.gitlab-ci.yml
@@ -25,7 +25,7 @@ variables:
   # services launched during tests
   DOCKER_SERVICES: ""
   # Those services underlying images will be built
-  DOCKER_BUILT_SERVICES: "node cron nginx"
+  DOCKER_BUILT_SERVICES: "node nginx"
   # Main image
   DOCKER_IMAGE: "{{cookiecutter.simple_docker_image}}"
   NGINX_DOCKER_IMAGE: "{{cookiecutter.simple_nginx_docker_image}}"
@@ -159,19 +159,18 @@ build_images: &build_images
   script:
   - &build_step1 |-
     for i in $DOCKER_BUILT_SERVICES;do
-      ( echo "$D_COMPOSE -f docker-compose-build.yml build $i" >&2 )&
-      ( $D_COMPOSE -f docker-compose-build.yml build $i \
+      ( echo "$D_COMPOSE -f docker-compose-prod.yml -f docker-compose-build.yml build $i" >&2 )
+      (       $D_COMPOSE -f docker-compose-prod.yml -f docker-compose-build.yml build $i \
         || ( echo "BUILD ERROR: $i" >> /docker_images_errors ) )
-    done
+    done;
     if [ -e /docker_images_errors ];then cat /docker_images_errors;exit 1;fi
   - &build_step2 sh -c "set -ex
     && docker inspect \"\${CURRENT_DOCKER_IMAGE}\" >/dev/null
-    && docker inspect \"\${ CURRENT_NGINX_DOCKER_IMAGE}\" >/dev/null
     && docker save
-       \$(docker history -q \"\${CURRENT_DOCKER_IMAGE}\" | tr '\n' ' ' | tr -d '<missing>')
-       \"\${CURRENT_DOCKER_IMAGE}\"
        \$(docker history -q \"\${CURRENT_NGINX_DOCKER_IMAGE}\" | tr '\n' ' ' | tr -d '<missing>')
        \"\${CURRENT_NGINX_DOCKER_IMAGE}\"
+       \$(docker history -q \"\${CURRENT_DOCKER_IMAGE}\" | tr '\n' ' ' | tr -d '<missing>')
+       \"\${CURRENT_DOCKER_IMAGE}\"
        | gzip > \"\${IMAGES_TARBALL}-pending\"
     && mv -fv \"\${IMAGES_TARBALL}-pending\" \"${IMAGES_TARBALL}\""
 
@@ -204,12 +203,13 @@ linting:
   # redo the docker login, without the /bin/true, failing if the registry is down
   - &release_step1 sh /docker_login
   # quoting & subshelling to work around gitlab variable substitutions
-  - &release_step2 sh -c "docker tag \"\$(eval echo \$TO_RELEASE_DOCKER_IMAGE)\"
+  - &release_step2 sh -c "docker tag \"\$(eval echo \$TO_RELEASE_NGINX_DOCKER_IMAGE)\"
+    \"\$(eval echo \$RELEASED_NGINX_DOCKER_IMAGE)\"
+    && docker tag \"\$(eval echo \$TO_RELEASE_DOCKER_IMAGE)\"
     \"\$(eval echo \$RELEASED_DOCKER_IMAGE)\""
-  - &release_step3 sh -c "docker push \"\$(eval echo \$RELEASED_DOCKER_IMAGE)\""
-  - &release_step4 sh -c "docker tag \"\$(eval echo \$TO_RELEASE_NGINX_DOCKER_IMAGE)\"
-    \"\$(eval echo \$RELEASED_NGINX_DOCKER_IMAGE)\""
-  - &release_step5 sh -c "docker push \"\$(eval echo \$RELEASED_NGINX_DOCKER_IMAGE)\""
+  - &release_step3 sh -c "docker push
+    \"\$(eval echo \$RELEASED_NGINX_DOCKER_IMAGE)\"
+    \"\$(eval echo \$RELEASED_DOCKER_IMAGE)\""
   variables: &release_vars
     PRELOAD_IMAGES: ""
     TO_RELEASE_DOCKER_IMAGE: "$CURRENT_DOCKER_IMAGE"
@@ -316,8 +316,6 @@ manual_dev_release_and_deploy: &manual_dev_release_and_deploy
   - *release_step1
   - *release_step2
   - *release_step3
-  - *release_step4
-  - *release_step5
   - *teardown_step1
   - *teardown_step2
   - *teardown_step3
