--- a/{{cookiecutter.out_dir}}/docker-compose.yml
+++ b/{{cookiecutter.out_dir}}/docker-compose.yml
@@ -1,36 +1,21 @@
 version: "3.7"
 x-images:
-  x-nginx: &nginx {environment: {RUN_NGINX: "1"}}
   x-env:
     env: &env {env_file: [.env, docker.env]}
   {{cookiecutter.app_type}}: &{{cookiecutter.app_type}}
+    <<: [ *env ]
     tty: true
     image: "${{'{'}}{{cookiecutter.app_type.upper()}}_IMAGE}:${{'{'}}{{cookiecutter.app_type.upper()}}_IMAGE_VERSION}"
-    command: /bin/bash /code/init/init.sh
 services:
   nginx:
     <<: [ *env ]
     image: "${{'{'}}{{cookiecutter.app_type.upper()}}_NGINX_IMAGE}:${{'{'}}{{cookiecutter.app_type.upper()}}_NGINX_IMAGE_VERSION}"
     volumes:
-      - ./local/terra-front-deploy/prod/etc/nginx/vhost.conf.template:/etc/nginx/conf.d/vhost.conf.template
+      - ./local/terra-front-deploy/prod/etc/nginx/vhost.conf.template:/etc/nginx/conf.d/default.conf.template
       - htpasswd:/etc/nginx/htpasswd
       - logs:/logs/
-    command: >
-      /bin/sh -c
-      "envsubst '
-      $$HOSTNAME
-      '< /etc/nginx/conf.d/vhost.conf.template
-      > /etc/nginx/conf.d/default.conf
-      && exec /code/init/init.sh"
-    environment:
-    - FOREGO_PROCFILE=/etc/procfiles/nginx_logrotate.Procfile
   {{cookiecutter.app_type}}:
     <<: [ *{{cookiecutter.app_type}} ]
-  cron:
-    <<: [ *{{cookiecutter.app_type}} ]
-    depends_on:
-      - {{cookiecutter.app_type}}
-    command: /bin/bash /code/init/cron.sh
 volumes:
   logs:
   htpasswd:
