--- a/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/all/app.yml
+++ b/{{cookiecutter.out_dir}}/.ansible/inventory/group_vars/all/app.yml
@@ -7,3 +7,7 @@ cops_terralego_nginx_docker_image: "{{cookiecutter.nginx_docker_image}}"
 cops_terralego_gitref: "{{'{{'}}lookup('env', 'CI_COMMIT_TAG_NAME') or lookup('env', 'CI_COMMIT_REF_NAME') or 'latest'}}"
 cops_terralego_docker_tag: "{{'{{'}}cops_terralego_gitref.replace('master', 'latest')}}"
 cops_terralego_nginx_docker_tag: "nginx-{{'{{'}}cops_terralego_docker_tag.replace('master', 'latest')}}"
+cops_terralego_node_base_node_image: corpusops/node
+cops_terralego_node_base_node_version: {{cookiecutter.node_version}}
+cops_terralego_node_base_nginx_image: corpusops/nginx
+cops_terralego_node_base_nginx_version: {{cookiecutter.nginx_version}}
